solving horizontal scroll bug

--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,7 @@
 
 *{
     margin:0;
+    /* border:1px solid red; */
 }
 
 body{
@@ -60,7 +61,7 @@ ul{
 
 header {
     background: #fff;
-    width:100%;
+    /* width:100%; */
     height:50px;
     box-shadow:0 1px 2px 0 rgb(0 , 0 , 0 , 0.12) ;
     padding : 8px 32px 6px 16px;
